[tool.poetry]
name = "fastapi-and-mongodb"
version = "0.1.0"
description = "example usage of mongodb with fastapi and following up SOLID principles"
authors = ["Vitaee <canilguu@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_and_mongodb"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"
jinja2 = "^3.1.2"
pydantic = {extras = ["email"], version = "^1.10.7"}
motor = "^3.1.2"
bcrypt = "^4.0.1"
starlette = "^0.26.1"
python-dotenv = "^1.0.0"
pyjwt = "^2.6.0"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
